
20100410:  Fixed the recent charts toolbar and moved the code into /src/RecentCharts class.

           The exchange names have been changed to use the ISO 10383 standard. Users will have to re-import your
           quotes to use the new exchange codes. The good news is that we will not be changing them again, and
           they are all only 4 characters long for much less typing.

20100411:  Added -asset command line option. See docs 'Command Line Interface' section.

           Added a RENAME script command. See docs.

           Changed zoom button behaviour to be more obvious. Hopefully it makes more sense now.

           Changed all script commands to return "ERROR" string if an error occurs. Lets keep everything nice
           and consistant. Please update your personal scripts to reflect these changes.

           Fixed the SYMBOL,CURRENT command which was returning ERROR for all conditions.

20100412:  Expanded the function buttons and menus to the side panels.

           Fixed bug that only read 1 command line switch at a time.

20100510:  Cleaning up Plot code to increase speed. Have been seeing some odd slowdowns when using a
           non-accelerated X11 driver in various linux distributions.

           Changed scale value markers in the plots to a more pleasing shape?

           Scripting interface has some issues still needed to be fixed. Very unstable right now as I work
           on some big changes. Working on a vector based plotting structure. This will simplify and unify
           the scripting and non-scripted interfaces. Instead of one big massive change to everything, I have
           opted to make the changes incrementally so that bugs can be found and fixed faster.

20100514:  Split the generation of source code documentation into a separate shell script.
           To generate or update the documentation, see docs/api/api.html
           (i.e. install Doxygen, do 'build-api-docs.sh' before doing 'configure'). Thanks to xley.