@@ -1,0 +1,108 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="qtstalker.css" media="screen" />
+    <script src="qtstalker.js" type="text/javascript"> </script>
+    <title>Qtstalker: Installing on Mac OS X</title>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  </head>
+  <body>
+    <div id="content">
+      <div id="rightPanel">
+        <div id="version"></div>
+        <div id="toc">
+          <hr />
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="toc.html">Table of Contents</a></li>
+        </div>
+      </div>
+<!-- Content -->
+    <h1>Qtstalker: Installing on Mac OS X</h1>
+    <h2 id="requirements">Requirements</h2>
+    <ul>
+      <li>Mac OS X Leopard (10.5) or Snow Leopard (10.6)</li>
+      <li>Apple Xcode Tools. To build Qtstalker from sources.</li>
+    </ul>
+    <h2 id="install">Installation</h2>
+    <p>
+      See the general <a href="install.html">Installation</a> instructions
+      for overview and tips.
+    </p>
+    <p>
+      There are other build systems and IDEs, however this works from the
+      command-line with minimal changes to Qtstalker sources.
+    </p>
+    <h3 id="ta-lib">Install TA-Lib</h3>
+    <p>
+      Install <a href="http://ta-lib.org">TA-Lib 0.4.0</a> from source.
+      This is easy.
+      (It could instead be installed via <a href="http://macports.org/">MacPorts</a>.)
+    </p>
+    <pre>
+./configure
+make
+sudo make install </pre>
+    <p>
+      This will install TA-Lib at <code>/usr/local</code> ...
+      See important <a href="install.html#source">notes</a> about ensuring
+      proper installation and configuration if at a non-standard location.
+    </p>
+    <h3 id="qt">Install Qt</h3>
+    <p>
+      Install Qt 4.6 or newer from source.
+      (This could instead be installed via <a href="http://macports.org/">MacPorts</a>.)
+    </p>
+    <p>
+      For Leopard this is straight-forward:
+    </p>
+    <pre>
+./configure
+make
+sudo make install </pre>
+    <p>
+      For Snow Leopard use this configuration:
+    </p>
+    <pre>
+./configure -cocoa -arch x86_64
+make
+sudo make install </pre>
+    <p>
+      See important <a href="install.html#source">notes</a> about ensuring
+      proper installation and adding to your <code>$PATH</code> to ensure that
+      '<code>qmake</code>' etc can be found.
+    </p>
+    <h3 id="build">Building Qtstalker</h3>
+    <p>
+      Prepare for compiling Qtstalker:
+    </p>
+    <p>
+      edit qtstalker.config ... to add the lines (using whatever version number):
+    </p>
+    <pre>
+INCLUDEPATH += /usr/local/Trolltech/Qt-4.6.3/include/Qt
+LIBS = -L/usr/local/Trolltech/Qt-4.6.3/lib </pre>
+    <p>
+      For Snow Leopard, edit configure ... to tweak the 'qmake' invocation
+      to include "CONFIG += qt x86_64"
+    </p>
+    <p>
+      Now compile Qtstalker:
+    </p>
+    <pre>
+./configure
+make
+sudo make install </pre>
+    <p>
+      Now start Qtstalker:
+    </p>
+    <pre>/usr/local/bin/qtstalker.app/Contents/MacOS/qtstalker</pre>
+    <p>
+      Tip: Use the "Keep in Dock" making it easier to start.
+    </p>
+    <p>
+      Tip: Use the "Console" application to see any log messages, e.g. during data loading.
+    </p>
+    </div>
+  </body>
+</html>
