@@ -90,6 +90,7 @@ ta-lib-config</code>' to ensure that this is properly installed. </p>
   <li><code>make</code></li>
   <li><code>sudo make install</code> (i.e. as superuser)</li>
 </ul>
+<p>See instructions for <a href="install-macx.html">Mac OS X</a>.</p>
 
 <h2>Where does stuff get installed</h2>
 <ul>
